# gnocchi

./: CMakeLists.txt  Makefile.am  README  analyser.cpp  analyser.hpp  auto-host.h  autogen.sh  before.cpp  bruce.cpp  build.sh  config.h  configure.ac  errors.c  function_data.hpp  gcov-iov.h  gcov_reader.cpp  gcov_reader.hpp  graph.hpp  main.cpp  npath_counter.hpp  refactored.cpp  reporter.hpp  system.h  system_test_1.cpp  test_input.c  test_mccabe.cpp  test_npath_counter.cpp  version.c
yaffut/: yaffut.h
